Switch transparentAncestors from LinkedList to ArrayList
Agent-Logs-Url: https://github.com/jaxen-xpath/jaxen/sessions/de05f510-531a-486a-b5ed-e6c93c50a834

Co-authored-by: elharo <1005544+elharo@users.noreply.github.com>